fixing header on IE

--- a/src/styles/layout/_header.less
+++ b/src/styles/layout/_header.less
@@ -114,13 +114,13 @@
 
 .desktop-navbar {
   display: none;
-  @media (min-width: @xxl) {
+  @media (min-width: @lg) {
     display: block;
   }
 }
 
 .mobile-navbar {
-  @media (min-width: @xxl) {
+  @media (min-width: @lg) {
     display: none;
   }
   .mobile-menu {
